# krunner-ssh

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  KRunnerSSH.json  ssh.cpp  ssh.h
